...
        value={values.preferredUnitSystem}
      />
      <TextField
        error={errors.height}
        keyboardType="decimal-pad"
        label={`Height (${isImperial ? 'in' : 'cm'})`}
        testID="profile-height"
        onChangeText={(height) =>
          setValues((current) => ({ ...current, height }))
        }
        returnKeyType="next"
        value={values.height}
      />
...
